--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,40 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+.card {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  margin: 5px 10px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+html,body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #f8f9fa !important;
+
+  font-size: 14px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+   
+  ::-webkit-scrollbar {
+    width: 0px;
+    height: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(114, 113, 113);
+    border-radius: 10px;
+    height: 200px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
 .App {
   text-align: center;
 }
@@ -5,34 +42,4 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
