--- a/src/Admin/Components/SideBar/SideBar.css
+++ b/src/Admin/Components/SideBar/SideBar.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   padding: 5px;
+  color: gray;
 }
 .icons p {
   padding-left: 7px;
@@ -27,9 +28,12 @@
 .icons:hover {
   /* background-color: white; */
   background-color: #727cf5;
-  color: white;
+  color: white !important;
 
   /* color: black; */
+}
+.icons p:hover {
+  color: white;
 }
 @media screen and (max-width: 500px) {
   .sidebar {
