--- a/src/Admin/Design/AddHostel.css
+++ b/src/Admin/Design/AddHostel.css
@@ -12,5 +12,13 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: white;
-  /* margin: 5px 10px; */
+  /* margin: 5px 10px; 
+*/
+}
+
+@media screen and (max-width: 500px) {
+  .hostelform {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
