--- a/src/Admin/Design/AddHostel.css
+++ b/src/Admin/Design/AddHostel.css
@@ -14,3 +14,31 @@
   background-color: white;
   /* margin: 5px 10px; */
 }
+
+.home-body {
+  margin-left: 28vh;
+  margin-right: 3vh;
+  margin-top: -90vh;
+}
+
+
+
+@media screen and (max-width: 500px) {
+  .hostelform{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    
+  }
+  .home-body {
+    margin-left: 0vh;
+    margin-right: 0vh;
+    margin-top: 0vh;
+  }
+  .bb {
+    margin-top: 10vh;
+  }
+  .copyright {
+    margin: 0px !important;
+    padding: 0px !important;
+  }
+}
