--- a/src/Admin/Design/AddHostel.css
+++ b/src/Admin/Design/AddHostel.css
@@ -12,8 +12,68 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: white;
-  /* margin: 5px 10px; 
-*/
+}
+.pdts-header-btns {
+  padding: 5px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.new_product_form {
+  display: flex !important;
+}
+.inputs_ctr {
+  flex: 1.5;
+}
+.image-ctr {
+  flex: 1;
+}
+.inputs_ctr {
+  margin-right: 15px;
+}
+.inputs_ctr_flex {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 20px;
+}
+.pdts-form-ctr {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 10px 15px;
+  padding: 15px;
+  border-radius: 5px;
+}
+.inputs_ctr_border {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+.inputs_ctr_fullwidth {
+  padding: 15px 20px;
+}
+.inputs_ctr_halfwidth {
+  padding: 15px 20px;
+}
+/*styles for image preview*/
+.images__preview_ctr {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+.images__preview_ctr > div {
+  /* width: 100px; */
+  height: 150px;
+  position: relative;
+  margin: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+.images__preview_ctr > div > img {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 500px) {
