--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -55,9 +55,14 @@
     align-items: center;
     flex: 1;
     margin-left: 30px;
-   
-
-
+  
+  }
+  .submitctr{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
   .text-ctr > div {
     margin: 10px 30px 10px 0px;
