--- a/src/HostelOwner/Routes/designs/home.css
+++ b/src/HostelOwner/Routes/designs/home.css
@@ -3,3 +3,14 @@
     display: flex;
     justify-content: space-between;
 }
+.__backhme{
+    padding-left: 5rem;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .rooms_grid{
+        display: flex;
+        flex-direction: column;
+    }
+}
