--- a/src/HostelOwner/Routes/designs/home.css
+++ b/src/HostelOwner/Routes/designs/home.css
@@ -1,16 +1,18 @@
-.top_btns{
-    padding: 5px 15px;
-    display: flex;
-    justify-content: space-between;
+.top_btns {
+  padding: 5px 15px;
+  display: flex;
+  justify-content: space-between;
 }
-.__backhme{
-    padding-left: 5rem;
+.__backhme {
+  padding-left: 5rem;
 }
-
 
 @media only screen and (max-width: 768px) {
-    .rooms_grid{
-        display: flex;
-        flex-direction: column;
-    }
+  .rooms_grid {
+    display: flex;
+    flex-direction: column;
+  }
+  /* .seach__ {
+    display: none !important;
+  } */
 }
