--- a/src/Admin/Design/AddHostel.css
+++ b/src/Admin/Design/AddHostel.css
@@ -63,12 +63,9 @@ styles for new product
 .inputs_ctr {
   margin-right: 15px;
 }
-#_1_ {
-  width: 16rem !important;
-}
-#_2_ {
-  margin-left: 80px !important;
-  width: 100%;
+.inputs_ctr_flex {
+  display: flex;
+  justify-content: space-between;
 }
 
 .inputs_ctr_border {
@@ -160,50 +157,5 @@ styles for new product
   .copyright {
     margin: 0px !important;
     padding: 0px !important;
-  }
-  .inputs_ctr_flex {
-    display: grid !important;
-    padding: 20px;
-  }
-  .__1 {
-    padding: 10px 0px;
-  }
-  .__2 {
-    padding-top: 10px;
-  }
-  #_1_ {
-    width: 16rem !important;
-    /* padding: 10px 10px; */
-  }
-  #_2_ {
-    margin-left: 0px !important;
-    width: 16rem !important;
-  }
-}
-@media screen and (max-width: 400px) {
-  #_1_ {
-    width: 12rem !important;
-  }
-  #_2_ {
-    margin-left: 0px !important;
-    width: 12rem !important;
-  }
-}
-@media screen and (max-width: 380px) {
-  #_1_ {
-    width: 12rem !important;
-  }
-  #_2_ {
-    margin-left: 0px !important;
-    width: 12rem !important;
-  }
-}
-@media screen and (max-width: 370px) {
-  #_1_ {
-    width: 10rem !important;
-  }
-  #_2_ {
-    margin-left: 0px !important;
-    width: 10rem !important;
   }
 }
