--- a/src/Admin/Design/AddHostel.css
+++ b/src/Admin/Design/AddHostel.css
@@ -1,14 +1,10 @@
-.hostelform {
-  display: flex;
-  flex: 2;
-}
 .description-form {
   flex: 1;
 }
 .image-form {
   flex: 1;
 }
-.card {
+.__card {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: white;
@@ -108,16 +104,13 @@ styles for new product
   width: 100%;
   height: 100%;
 }
-
-@media screen and (max-width: 500px) {
-  .hostelform{
+@media screen and (max-width: 768px) {
+  .hostelform {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    
   }
-  .new_pdt_btn_refs_ctr{
-  margin: 5px;
-
+  .new_pdt_btn_refs_ctr {
+    margin: 5px;
   }
   .images__preview_ctr > div {
     /* width: 100px; */
@@ -159,5 +152,8 @@ styles for new product
   .copyright {
     margin: 0px !important;
     padding: 0px !important;
+  }
+  h2 {
+    font-size: 16px;
   }
 }
