--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@ body {
   color: var(--text-grey);
 }
 main {
-  margin-top: 70px;
+  margin-top: 80px;
   padding: 2rem 1rem;
   background: #f1f5f9;
   min-height: calc(100vh-90px);
@@ -310,6 +310,9 @@ td {
     display: block;
     pointer-events: all;
   }
+  label span{
+    font-size: 35px;
+  }
   .health_unit_name {
     display: none;
   }
@@ -357,4 +360,8 @@ td {
     width: 97% !important;
     left: 0 !important;
   }
+  .main{
+    margin-top: 90px;
+  }
+
 }
