--- a/src/HostelOwner/Routes/designs/profile.css
+++ b/src/HostelOwner/Routes/designs/profile.css
@@ -4,8 +4,10 @@
 }
 .profile {
   display: flex;
+  width: 80%;
+  margin: 15px auto;
   flex: 2;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .showprofile {
   flex: 1;
@@ -24,7 +26,7 @@
 .editprofile div {
   padding: 5px;
 }
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 768px) {
   .profile {
     display: grid;
   }
